# dig-dug-game

./: .gitignore  Game.cpp  Projectile.cpp  Projectile.h  README.md  bash.sh  generate_placeholder_sprites.py  temp_player_fix.txt
game-source-code/: AnimationManager.cpp  AnimationManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  FallingRock.cpp  FallingRock.h  Game.cpp  Game.cpp.backup  Game.cpp.backup2  Game.cpp.backup4  Game.h  Game.h.backup  GameThing.cpp  GameThing.h  Interfaces.h  Monster.cpp  Monster.cpp.backup  Monster.cpp.flip_backup  Monster.h  Player.cpp  Player.cpp.backup  Player.cpp.bak  Player.h  Position.cpp  Position.h  Position.h.backup  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h  SpriteManager.h  TerrainGrid.cpp  TerrainGrid.cpp.backup  TerrainGrid.cpp.backup2  TerrainGrid.h  TerrainGrid.h.backup  main.cpp  source.sh
game-source-code/resources/: level1.txt
resources/: level1.txt  level1.txt.backup  level2.txt  level3.txt  level4.txt  level5.txt
resources/sprites/effects/: README.txt
test-source-code/: BasicTests.cpp  tests.cpp  tests.cpp.backup
